--- a/notes-node/package.json
+++ b/notes-node/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "author": "Ben J",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.5",
     "yargs": "^4.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
